fix: 챌린지 코드 리팩토링 및 수정
